--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <center><h1>URL Shortener</h1></center>
     <center><form action="/" method='post'>
 
-        <input type="text" name="url"  placeholder="Enter URL here" id="url">
+        <input type="text" name="url"  placeholder="Enter URL here" id="url" required>
         <button type="submit">Submit</button>
 
     </form></center>
